# RAS_TEST

trunk/: config.h.in  configure  configure.ac
trunk/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3
trunk/include/: Makefile  config.status
trunk/include/RC/: ALAgent.h  CloseFWInstanceTask.h  CloseModuleBaseTask.h  CloseSelfTask.h  ConfigManager.h  ContainResourceTask.h  FWIManager.h  FWInstance.h  FWMAgent.h  FWMHeartBeatTask.h  FWMHeartBeatTimer.h  FWMRegTask.h  GetFWInstanceInfoTask.h  GetNCFromAll.h  GetNCFromOne.h  GetNCFromSome.h  GetPlatformResInfoTask.h  InfoFromFWMToRC.h  InfoFromNCToRC.h  InfoSendToFWM.h  InfoSendToNC.h  NCAgent.h  NCHeartBeatTask.h  NCHeartBeatTimer.h  NCLoadBalance.h  NCRegTask.h  RequestResTask.h  Resource.h  ResourceManager.h  ResourceScheduler.h  ReturnResTask.h  RunControl.h  SASAgent.h  StartFWRootTask.h  StartFWSlaveTask.h  StopModuleTask.h  Strategy.h  StrategyManager.h  Task.h  head.h
trunk/include/protocol/: AlProtocol.pb.h  FwmRcProtocol.pb.h  RASCmdCode.h  RASErrorCode.h  RcNcProtocol.pb.h  RcSasProtocol.pb.h  SchedulerType.h  TaskType.h
trunk/include/src/: Makefile
trunk/include/src/AL/: Makefile
trunk/include/src/common/: Makefile
trunk/include/src/common/Timer/: Makefile
trunk/include/src/common/comm/: Makefile
trunk/include/src/common/log/: Makefile
trunk/include/src/protocol/: Makefile
trunk/include/src/testclient/: Makefile
trunk/include/src/testserver/: Makefile
trunk/lib/: libcommon.la  libprotocol.la
trunk/scripts/: RASAL.build.sh  RASRC_build.sh
trunk/src/: Makefile.am  Makefile.in
trunk/src/AL/: ALconfig.xml  ConfigManager.cpp  ConfigManager.h  Makefile.am  Makefile.in  ServerAgent.cpp  ServerAgent.h  header.h  main.cpp
trunk/src/TEST/: ConfigManager.h  Makefile.am  Makefile.in  ServerAgent.cpp  configFile1.xml  header.h  main.cpp
trunk/src/TEST2/: ClientAgent.cpp  ConfigManager.cpp  HeartBeatTimer.cpp  HeartBeatTimer.h  Makefile.am  Makefile.in  ServerAgent.cpp  main.cpp
trunk/src/common/: Makefile.in
trunk/src/common/Timer/: Makefile.in
trunk/src/common/comm/: Makefile.in
trunk/src/common/daemon/: Makefile.in
trunk/src/common/log/: Makefile.in
trunk/src/common/odbc/: Makefile.in
trunk/src/common/sys/: Makefile.in
trunk/src/common/util/: Makefile.in
trunk/src/common/xml/: Makefile.in
trunk/src/protocol/: AlProtocol.pb.cc  AlProtocol.proto  FwmRcProtocol.pb.cc  Makefile.am  Makefile.in  RcNcProtocol.pb.cc  RcNcProtocol.proto  RcSasProtocol.pb.cc  RcSasProtocol.proto
trunk/test/: Makefile.in
(+4 files in other folders)
